# analysis-of-ransomware-attacks

./: .gitignore  CITATION.cff  README.md
docs/attack-navigator/: mwutils.json  ransomware-supply-chain-attack.json
docs/source/: Logging.md  Package.md  README.md  conf.py  index.rst
src/: improve_code.bat  package.bat  requirements.txt
src/package_mwutils/: README.md  pyproject.toml
src/package_mwutils/mwutils/: __init__.py
src/package_mwutils/mwutils/collection/: __init__.py
src/package_mwutils/mwutils/command_and_control/: __init__.py  asymmetric_cryptography.py  dns.py  helper.py  symmetric_cryptography.py  web_protocols.py
src/package_mwutils/mwutils/credential_access/: __init__.py
src/package_mwutils/mwutils/defense_evasion/: __init__.py  debugger_evasion.py  indicator_removal.py  virtualization_sandbox_evasion.py
src/package_mwutils/mwutils/discovery/: __init__.py  file_and_directory_discovery.py  system_owner_user_discovery.py
src/package_mwutils/mwutils/execution/: __init__.py
src/package_mwutils/mwutils/exfiltration/: __init__.py
src/package_mwutils/mwutils/gui/: __init__.py  gui_main.py  playaudio.py  ransomware.py
src/package_mwutils/mwutils/impact/: __init__.py  data_encrypted_for_impact.py  helper.py  inhibit_system_recovery.py  internal_defacement.py
src/package_mwutils/mwutils/initial_access/: __init__.py
src/package_mwutils/mwutils/lateral_movement/: __init__.py
src/package_mwutils/mwutils/persistence/: __init__.py  registry_run_keys_startup_folder.py
src/package_mwutils/mwutils/privilege_escalation/: __init__.py
src/package_mwutils/mwutils/reconnaissance/: __init__.py
src/package_mwutils/mwutils/resource_development/: __init__.py
src/package_mwutils/mwutils/server/: datastorage.py  db.py  webserver.py
src/package_mwutils/mwutils/server/templates/: leak.html  leaked_client.html  main.html
src/package_mwutils/mwutils/utils/: __init__.py  helper.py
src/package_playaudio/: LICENSE  README.md  pyproject.toml
src/package_playaudio/playaudio/: __init__.py  app.py
src/package_updater/: .pyproject.toml  README.md  requirements.txt  setup.py
src/package_updater/updater/: __init__.py  conf.toml  updater.py
src/ransomware/: README.md  build.bat  ransomware.py  server.py
